Disables List view on mobile and fixes it for small screens (#4429)
* Resolve #4427, disable RX list view on mobile

* Add labels for small screen desktop list view

* add event listener for toggling state

* Use display property to set view type on small screens

*  add comment for clarity

--- a/src/sass/rx/partials/_rx-table.scss
+++ b/src/sass/rx/partials/_rx-table.scss
@@ -31,6 +31,27 @@
       &:before {
         font-weight: bold;
       }
+
+      &:nth-child(2) {
+        &:before{
+          content: 'Submit Date: ',
+        }
+      }
+      &:nth-child(3) {
+        &:before{
+          content: 'Fill Date: ',
+        }
+      }
+      &:nth-child(4) {
+        &:before{
+          content: 'Facility: ',
+        }
+      }
+      &:nth-child(5) {
+        &:before{
+          content: 'Refills Left: ',
+        }
+      }
     }
   }
 }
